syntax = "proto3";

option csharp_namespace = "Company.Template.Grpc";

package product;

// Product service definition
service ProductService {
  // Creates a new product
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  
  // Gets a product by ID
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  
  // Updates an existing product
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  
  // Deletes a product
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  
  // Lists products with pagination
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

// Request message for creating a product
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

// Request message for getting a product
message GetProductRequest {
  string id = 1;
}

// Request message for updating a product
message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

// Request message for deleting a product
message DeleteProductRequest {
  string id = 1;
}

// Request message for listing products
message ListProductsRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

// Response message for product operations
message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Response message for delete operation
message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

// Response message for listing products
message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total_count = 2;
  int32 page_number = 3;
  int32 page_size = 4;
  bool has_next_page = 5;
  bool has_previous_page = 6;
}